--- a/LibraryProof/app/src/main/res/menu/menu_author_form.xml
+++ b/LibraryProof/app/src/main/res/menu/menu_author_form.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="io.androoid.libraryproof.activities.AuthorFormActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/action_save_author"
+        android:icon="@drawable/ic_action_save"
+        android:title="@string/action_save_author"
+        android:showAsAction="ifRoom" />
 </menu>
