--- a/LibraryProof/app/src/main/res/layout/author_list_activity.xml
+++ b/LibraryProof/app/src/main/res/layout/author_list_activity.xml
@@ -3,13 +3,16 @@
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="io.androoid.libraryproof.activities.AuthorListActivity">
+    tools:context="io.androoid.libraryproof.activities.AuthorListActivity"
+    android:longClickable="false"
+    android:background="@android:color/white">
 
     <ListView
+        android:background="@android:color/white"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@android:id/list"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:choiceMode="multipleChoice" />
+        android:choiceMode="multipleChoiceModal" />
 </RelativeLayout>
