--- a/LibraryProof/app/src/main/res/layout/author_list_activity.xml
+++ b/LibraryProof/app/src/main/res/layout/author_list_activity.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="io.androoid.libraryproof.activities.AuthorListActivity"
+    tools:context="io.androoid.libraryproof.activities.authors.AuthorListActivity"
     android:longClickable="false"
     android:background="@android:color/white">
 
