--- a/LibraryProof/app/src/main/res/layout/main_activity.xml
+++ b/LibraryProof/app/src/main/res/layout/main_activity.xml
@@ -37,4 +37,17 @@
         android:layout_below="@+id/welcome_text_view"
         android:layout_alignParentEnd="true" />
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/label_list_books"
+        android:id="@+id/list_books_button"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#ff67872d"
+        android:textColor="#ffffffff"
+        android:layout_below="@+id/list_authors_button"
+        android:layout_alignParentEnd="true"/>
+
 </RelativeLayout>
