--- a/LibraryProof/app/src/main/res/menu/menu_list.xml
+++ b/LibraryProof/app/src/main/res/menu/menu_list.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="io.androoid.libraryproof.activities.authors.AuthorListActivity">
-    <item android:id="@+id/action_add_author"
+    <item android:id="@+id/action_add"
         android:icon="@drawable/ic_action_new"
-        android:title="@string/action_add_author"
+        android:title="@string/action_add"
         android:showAsAction="ifRoom" />
 </menu>
