--- a/LibraryProof/src/main/res/layout/library_form_activity.xml
+++ b/LibraryProof/src/main/res/layout/library_form_activity.xml
@@ -4,15 +4,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="io.androoid.libraryproof.activities.books.BookFormActivity"
+    tools:context="io.androoid.libraryproof.activities.libraries.LibraryFormActivity"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/book_title"
-        android:id="@+id/title_textView"
-        android:layout_alignStart="@+id/book_title_text"
+        android:text="@string/library_name"
+        android:id="@+id/name_textView"
+        android:layout_alignStart="@+id/library_name_text"
         android:layout_alignParentStart="true" />
 
     <EditText
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:ems="10"
-        android:id="@+id/book_title_text"
+        android:id="@+id/library_name_text"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="false"
@@ -29,9 +29,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/book_isbn"
-        android:id="@+id/isbn_textView"
-        android:layout_alignStart="@+id/book_isbn_text"
+        android:text="@string/library_location"
+        android:id="@+id/location_textView"
+        android:layout_alignStart="@+id/library_location_text"
         android:layout_alignParentStart="true" />
 
     <EditText
@@ -39,43 +39,27 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:ems="10"
-        android:id="@+id/book_isbn_text"
+        android:id="@+id/library_location_text"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="false"
         android:layout_marginTop="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/book_year"
-        android:id="@+id/year_textView"
-        android:layout_alignStart="@+id/book_year_text"
-        android:layout_alignParentStart="true" />
-
-    <EditText
+    <org.osmdroid.views.MapView android:id="@+id/library_location_map"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/book_year_text"
+        android:layout_height="250dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="false"
         android:layout_marginTop="10dp" />
 
-    <TextView
+    <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/book_author"
-        android:id="@+id/author_textView"
-        android:layout_alignStart="@+id/book_author_text"
-        android:layout_alignParentStart="true" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/book_author_text"
+        android:text="@string/library_public"
+        android:textOn="@string/yes"
+        android:textOff="@string/no"
+        android:id="@+id/library_public_switch"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="false"
